--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,35 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>TP1</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+<link rel="stylesheet" href="css.css">
+<title>CV</title>
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <!-- Place favicon.ico in the root directory -->
+</head>
 
-    <style>
-      body {
-        background-color: #e9ebee;
-        font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-        font-size: 16px;
-        margin: 0 auto;
-        max-width: 800px;
-      }
-    </style>
+<body>
+    <table width="100%" border="1">
+        <tr>
+            <td>BECHANI Djihane</td>
+            <td>Célibataire</td>
+        </tr>
+        <tr>
+            <td>51 rue de paris franconville,la garenne </td>
+            <td>Permis de catégorie B</td>
+        </tr>
+        <tr>
+            <td>0644749977</td> 
+            <td>  </td>
+        </tr>
+        <tr>
+            <td>djihanebechani@outlook.com</td>  
+            <td>  </td>
 
-    <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-    <!--<link rel="stylesheet" href="style.css">-->
-    <!--<script src="main.js"></script>-->
-  </head>
-  <body>
-    <h1>TP 1</h1>
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
-    <img src="../galilee.png" alt="Logo Galilee" />
+        </tr>
+    </table>
+    <center> <h1>Ingénieur d'études et développement</h1></center>
+    <h1>Formations</h1>
+    <table width="100%" border="1">
+        <tr>
+            <td>2015</td>
+            <td>Bac Scientifique</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td><a href="https://fei.usthb.dz/spip.php?article48">Licence </a>en Génie de Télécommunication  à l'USTHB</td>
+        </tr>
+        <tr>
+            <td>2020 </td>
+            <td><a href="https://fei.usthb.dz/spip.php?article66">Master</a> en Systeme Téléommunication à USTHB</td>
+        </tr>
+        <tr>
+            <td>2020 en cours</td>
+            <td><a href="https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/">Master </a>3IR Paris 13</td>
+        </tr>
+    </table>
+    <h1>Competences</h1>
+    <table width="100%" border="1">
+        <tr>
+            <td>2018</td>
+            <td>Stage licence
+            </td> 
+        </tr>
+        <tr>
+            <td>2019</td>
+            <td>stage chez Algerie Telecome 
+            </td>
+        </tr>
+        <tr>
+            <td>2020</td>
+            <td>stage master chez l operateur mobilis
+            </td>
+        </tr>
+        
+    </table>
+    <h1>Centres d'intérêts</h1>
+    <table width='100%' border="1">
+        <tr>
+            <td>Sport</td>
+            <td>handball, natation</td>
+        </tr>
+        <tr>
+            <td>Voyages</td>
+            <td>suisse,Dubai,tunisie,France </td>
+        </tr>
+        <tr>
+            <td>Culture</td>
+            <td>Cinéma</td>
+        </tr>
+    </table>
 
-    <h2><a href="experiences/index.html">Expériences</a></h2>
-  </body>
+</body>
 </html>
