--- a/tp1/index.html
+++ b/tp1/index.html
@@ -27,7 +27,8 @@
         </tr>
     </table>
     <center> <h1>Ingénieur d'études et développement</h1></center>
-    <h1>Formations</h1>
+
+    <h1><a href="formation.html">Formations</a></h1>
     <table width="100%" border="1">
         <tr>
             <td>2015</td>
@@ -46,7 +47,7 @@
             <td><a href="https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/">Master </a>3IR Paris 13</td>
         </tr>
     </table>
-    <h1>Competences</h1>
+    <h1><a href="experiences.html">Competences</a></h1>
     <table width="100%" border="1">
         <tr>
             <td>2018</td>
